--- a/musetic/templates/flatpages/terms_of_use.html
+++ b/musetic/templates/flatpages/terms_of_use.html
@@ -2,10 +2,15 @@
 {% load i18n %}
 
 {% block title %}Terms of Use | Musetic{% endblock %}
+
+{% block sidebar %}
+    {% include 'flatpages/sidebar_menu.html' %}
+{% endblock %}
+
 {% block content %}
     <h2 class="headline">Terms of Use</h2>
 
-      <hr class="divider" />
+    <hr class="divider" />
 <div id="terms">
         <p>Last updated November 19, 2014.&nbsp;</p>
 
