--- a/musetic/templates/registration/password_change_form.html
+++ b/musetic/templates/registration/password_change_form.html
@@ -1,10 +1,35 @@
-{% load i18n %}
+{% extends "base.html" %}
+{% load i18n crispy_forms_tags humanize static avatar_tags %}
 
-<form method="post" action="{% url 'auth_password_change' %}">
-    {% csrf_token %}
-    <input id="id_old_password" name="old_password" type="password" placeholder="Old Password" />
-    <input id="id_new_password1" name="new_password1" type="password" placeholder="New Password" />
-    <input id="id_new_password2" name="new_password2" type="password" placeholder="New Password (again)" />
-    <input type="submit" id="submit" class="button" value="{% trans 'Submit' %}"/>
+{% block title %}{{ user.username }} - Change Password | Musetic{% endblock %}
 
-</form>
+{% block sidebar %}{% include 'user/settings_menu.html' %}{% endblock %}
+{% block content %}
+
+<div class="settings-wrapper">
+
+    <div class="settings-content">
+
+        <h3>Update Your Password</h3>
+        <form method="post" action="{% url 'auth_password_change' %}">
+            {% csrf_token %}
+
+            <label for="id_old_password">Old Password</label>
+            <input id="id_old_password" name="old_password" type="password" />
+
+            <label for="id_new_password1">New Password</label>
+            <input id="id_new_password1" name="new_password1" type="password" />
+
+            <label for="id_new_password2">New Password (again)</label>
+            <input id="id_new_password2" name="new_password2" type="password" />
+
+            <input type="submit" id="submit" class="button success" value="{% trans 'Update Password' %}"/>
+
+        </form>
+
+    </div>
+</div>
+{% endblock %}
+
+{% block js %}
+{% endblock %}
