--- a/musetic/templates/registration/password_reset_confirm.html
+++ b/musetic/templates/registration/password_reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_full_width.html" %}
 {% load i18n static %}
 
 {% block title %}Change Password | Musetic{% endblock %}
@@ -16,7 +16,7 @@
                 <input id="id_new_password1" name="new_password1" type="password" placeholder="New Password"/>
                 <input id="id_new_password2" name="new_password2" type="password" placeholder="New Password (again)"/>
 
-                <input type="submit" id="submit" value="{% trans 'Submit' %}"/>
+                <input type="submit" id="submit" class="button success" value="{% trans 'Save' %}"/>
             </form>
 
         {% else %}
