--- a/musetic/templates/submission/category_list.html
+++ b/musetic/templates/submission/category_list.html
@@ -1,33 +1,79 @@
 {% extends "base.html" %}
-{% load static i18n humanize submission_tags active %}
+{% load static i18n humanize submission_tags active avatar_tags %}
 
 {% block title %}{{ submission_type|capfirst }} | Musetic{% endblock %}
 
-{% block content %}
-    <div class="submission-category">
-        {% if submission_type == 'art' %}
-            <span class="category-icon art"><i class="fa fa-paint-brush"></i>&nbsp;<span class="category-text">Art</span></span>
-        {% elif submission_type == 'design' %}
-            <span class="category-icon design"><i class="fa fa-desktop"></i>&nbsp;<span class="category-text">Design</span></span>
-        {% elif submission_type == 'imagery' %}
-            <span class="category-icon imagery"><i class="fa fa-camera"></i>&nbsp;<span class="category-text">Imagery</span></span>
-        {% elif submission_type == 'sound' %}
-            <span class="category-icon sound"><i class="fa fa-headphones"></i>&nbsp;<span class="category-text">Sound</span></span>
-        {% elif submission_type == 'video' %}
-            <span class="category-icon video"><i class="fa fa-video-camera"></i>&nbsp;<span class="category-text">Video</span></span>
-        {% elif submission_type == 'writing' %}
-            <span class="category-icon writing"><i class="fa fa-pencil"></i>&nbsp;<span class="category-text">Writing</span></span>
-        {% endif %}
+{% block headersecondary %}
+    <div class="header-secondary fixed">
+        <div class="submission-category">
+            {% if submission_type == 'art' %}
+                <span class="category-icon art"><span class="category-text">Art</span></span>
+            {% elif submission_type == 'design' %}
+                <span class="category-icon design"><span class="category-text">Design</span></span>
+            {% elif submission_type == 'imagery' %}
+                <span class="category-icon imagery"><span class="category-text">Imagery</span></span>
+            {% elif submission_type == 'sound' %}
+                <span class="category-icon sound"><span class="category-text">Sound</span></span>
+            {% elif submission_type == 'video' %}
+                <span class="category-icon video"><span class="category-text">Video</span></span>
+            {% elif submission_type == 'writing' %}
+                <span class="category-icon writing"><span class="category-text">Writing</span></span>
+            {% endif %}
 
-        <ul class="submission-filter-group">
-            <li><a class="filter-button {% ifactive 'category' slug=submission_type %}active{% endifactive %}" href="{% url 'category' slug=submission_type %}">Hot</a></li>
-            <li><a class="filter-button {% ifactive 'category_new' slug=submission_type %}active{% endifactive %}" href="{% url 'category_new' slug=submission_type %}">New</a></li>
-            <li><a class="filter-button {% ifactive 'category_top' slug=submission_type %}active{% endifactive %}" href="{% url 'category_top' slug=submission_type %}">Top</a></li>
-        </ul>
+            <ul class="submission-filter-group">
+                <li><a class="filter-button {% ifactive 'category' slug=submission_type %}active{% endifactive %}" href="{% url 'category' slug=submission_type %}">Hot</a></li>
+                <li><a class="filter-button {% ifactive 'category_new' slug=submission_type %}active{% endifactive %}" href="{% url 'category_new' slug=submission_type %}">New</a></li>
+                <li><a class="filter-button {% ifactive 'category_top' slug=submission_type %}active{% endifactive %}" href="{% url 'category_top' slug=submission_type %}">Top</a></li>
+            </ul>
+        </div>
     </div>
+{% endblock %}
 
-    <div class="submissions-list">
-        <ul class="hexagon">
+{% block sidebar %}
+<div class="sidebar pushy-left">
+    <ul class="categories">
+        <li><a class="{% ifactive 'category' slug='art' %}active{% endifactive %}" href="{% url 'category' slug='art' %}" data-toggle="tooltip" data-placement="bottom" title="Art"><i class="fa fa-paint-brush"></i></a></li>
+        <li><a class="{% ifactive 'category' slug='design' %}active{% endifactive %}" href="{% url 'category' slug='design' %}" data-toggle="tooltip" data-placement="bottom" title="Design"><i class="fa fa-desktop"></i></a></li>
+        <li><a class="{% ifactive 'category' slug='imagery' %}active{% endifactive %}" href="{% url 'category' slug='imagery' %}" data-toggle="tooltip" data-placement="bottom" title="Imagery"><i class="fa fa-camera"></i></a></li>
+        <li><a class="{% ifactive 'category' slug='sound' %}active{% endifactive %}" href="{% url 'category' slug='sound' %}" data-toggle="tooltip" data-placement="bottom" title="Sound"><i class="fa fa-headphones"></i></a></li>
+        <li><a class="{% ifactive 'category' slug='video' %}active{% endifactive %}" href="{% url 'category' slug='video' %}" data-toggle="tooltip" data-placement="bottom" title="Video"><i class="fa fa-video-camera"></i></a></li>
+        <li><a class="{% ifactive 'category' slug='writing' %}active{% endifactive %}" href="{% url 'category' slug='writing' %}" data-toggle="tooltip" data-placement="bottom" title="Writing"><i class="fa fa-pencil"></i></a></li>
+    </ul>
+
+    {% if user.is_authenticated %}
+    <div class="profile-info">
+        <div class="profile-pic-wrapper">
+            <a href="{% url 'user_profile' user.username %}"><img src="{% avatar_url user.username 200 %}"/></a>
+        </div>
+
+        <div class="profile-score-wrap">
+            <div class="submission-score" title="{% if user.profile.score == 1 %}{{ user.profile.score }} Creator point{% else %}{{ user.profile.score }} Creator points{% endif %}">{{ user.profile.score }}
+                <div class="submission-score-desc">Creator {% if user.profile.score == 1 %}point{% else %}points{% endif %}</div></div>
+            <div class="discussion-score" title="{% if user.profile.discussion_score == 1 %}{{ user.profile.discussion_score }} Comment point{% else %}{{ user.profile.discussion_score }} Comment points{% endif %}">{{ user.profile.discussion_score }}
+                <div class="discussion-score-desc">Comment {% if user.profile.discussion_score == 1 %}point{% else %}points{% endif %}</div></div>
+        </div>
+
+    </div>
+    {% endif %}
+
+    <div class="footer">
+    	<div class="footer-links">
+			<a href="{% url 'about' %}">About&nbsp;</a>
+            <a href="http://blog.musetic.com">Blog&nbsp;</a>
+			<a href="{% url 'terms_of_use' %}">Terms&nbsp;</a>
+			<a href="{% url 'privacy_policy' %}">Privacy&nbsp;</a>
+		</div>
+    	<div class="copy left">
+			&copy; 2015 Musetic
+		</div>
+    </div>
+</div>
+
+{% endblock %}
+
+{% block content %}
+    <div class="submissions-list submissions-category-list">
+        <ul class="hexagon clearfix">
             {% for submission in submissions %}
                 <li class="submissions-item">
 
@@ -48,7 +94,7 @@
                         <input type="hidden" id="id_voter" name="voter" class="hidden_id"
                                value="{{ user.id }}"/>
                         {% if not user.is_authenticated %}
-                            <button disabled class="upvote-button vote-disabled" title="Login/Register to vote"><i
+                            <button class="upvote-button vote-disabled" title="Login/Register to vote"><i
                                     class="fa fa-2x fa-angle-up"></i></button>
                             <div class="num-votes vote-disabled">
                                 {{ submission.votes }}
@@ -72,7 +118,7 @@
 
                             <div class="submissions-time">{{ submission.date_submitted|naturalday }}</div>
 
-                            <a class="submissions-more" href="{% url 'submission_detail' slug=submission.submission_type uuid=submission.uuid %}"><i class="fa fa-lg fa-comments-o"></i>&nbsp;&nbsp;{{ submission.comment_count }}</a>
+                            <a class="submissions-more" href="{% url 'submission_detail' slug=submission.submission_type uuid=submission.uuid %}"><i class="fa fa-lg fa-comments-o"></i>&nbsp;&nbsp;{{ submission.get_comment_count }}</a>
                         </div>
                 </li>
             {% empty %}
@@ -83,16 +129,22 @@
             {% endfor %}
         </ul>
     </div>
-    {% if pagination %}
-        <div class="pagination">
-            {% if pagination.previous %}
-            <a class="prev button" href="{{ pagination.previous }}">&laquo; Previous</a>
+    <hr style="visibility: hidden;"/>
+    <div class="pagination">
+        <span class="step-links">
+            {% if submissions.has_previous %}
+                <a class="prev button" href="?page={{ submissions.previous_page_number }}">previous</a>
             {% endif %}
-            {% if pagination.next %}
-            <a class="next button" href="{{ pagination.next }}">Next &raquo;</a>
+
+            <span class="current">
+                {{ submissions.number }}
+            </span>
+
+            {% if submissions.has_next %}
+                <a class="next button" href="?page={{ submissions.next_page_number }}">next</a>
             {% endif %}
-        </div>
-    {% endif %}
+        </span>
+    </div>
 {% endblock %}
 
 {% block js %}
