--- a/musetic/static/musetic/css/auth.css
+++ b/musetic/static/musetic/css/auth.css
@@ -1,3 +1,6 @@
+.auth-page {
+    padding-top: 25px;
+}
 .auth-page img.musetic-logo {
     position: absolute;
     height: 100px;
@@ -94,6 +97,9 @@ label {
     border-radius: 4px;
 }
 
+.auth-page input.register-submit {
+    margin: 20px 0 0 50px;
+}
 
 .terms {
     color: #222222;
