--- a/musetic/templates/avatar/add.html
+++ b/musetic/templates/avatar/add.html
@@ -1,16 +1,25 @@
 {% extends "base.html" %}
-{% load i18n avatar_tags %}
-{% load url from future %}
+{% load i18n crispy_forms_tags humanize static avatar_tags %}
 
+{% block title %}{{ user.username }} - Add Avatar | Musetic{% endblock %}
+
+{% block sidebar %}{% include 'user/settings_menu.html' %}{% endblock %}
 {% block content %}
+
+<div class="settings-wrapper">
+
+    <div class="settings-content">
     <p>{% trans "Your current avatar: " %}</p>
     {% avatar user %}
     {% if not avatars %}
         <p>{% trans "You haven't uploaded an avatar yet. Please upload one now." %}</p>
     {% endif %}
-    <form enctype="multipart/form-data" method="POST" action="{% url 'avatar_add' %}">
+    <form enctype="multipart/form-data" method="POST" action="{% url 'settings_avatar_add' %}">
         {{ upload_avatar_form.as_p }}
-        <p>{% csrf_token %}<input type="submit" value="{% trans "Upload New Image" %}" /></p>
+        <p>{% csrf_token %}<input class="button success" type="submit" value="{% trans "Upload New Image" %}" /></p>
     </form>
+
+    </div>
+</div>
 
 {% endblock %}
