--- a/musetic/templates/avatar/confirm_delete.html
+++ b/musetic/templates/avatar/confirm_delete.html
@@ -1,18 +1,27 @@
 {% extends "base.html" %}
-{% load i18n %}
-{% load url from future %}
+{% load i18n crispy_forms_tags humanize static avatar_tags %}
 
+{% block title %}{{ user.username }} - Delete Avatar | Musetic{% endblock %}
+
+{% block sidebar %}{% include 'user/settings_menu.html' %}{% endblock %}
 {% block content %}
+
+<div class="settings-wrapper">
+
+    <div class="settings-content">
+
     <p>{% trans "Please select the avatars that you would like to delete." %}</p>
     {% if not avatars %}
-        {% url 'avatar_change' as avatar_change_url %}
-        <p>{% blocktrans %}You have no avatars to delete. Please <a href="{{ avatar_change_url }}">upload one</a> now.{% endblocktrans %}</p>
+        <p>{% blocktrans %}You have no avatars to delete. Please <a href="{% url 'settings_avatar' %}">upload one</a> now.{% endblocktrans %}</p>
     {% else %}
-        <form method="POST" action="{% url 'avatar_delete' %}">
+        <form method="POST" action="{% url 'settings_avatar_delete' %}">
             <ul>
                 {{ delete_avatar_form.as_ul }}
             </ul>
             <p>{% csrf_token %}<input type="submit" value="{% trans "Delete These" %}" /></p>
         </form>
     {% endif %}
+
+    </div>
+</div>
 {% endblock %}
