--- a/musetic/templates/flatpages/privacy_policy.html
+++ b/musetic/templates/flatpages/privacy_policy.html
@@ -2,6 +2,11 @@
 {% load i18n %}
 
 {% block title %}Privacy Policy | Musetic{% endblock %}
+
+{% block sidebar %}
+    {% include 'flatpages/sidebar_menu.html' %}
+{% endblock %}
+
 {% block content %}
     <h1>Privacy Policy</h1><div id='ppBody'><div class='ppConsistencies'><div class='col-2'>
 
