--- a/musetic/templates/submission/edit_thumbnail.html
+++ b/musetic/templates/submission/edit_thumbnail.html
@@ -2,9 +2,75 @@
 {% load static i18n humanize submission_tags crispy_forms_tags %}
 
 {% block title %}{{ submission.title }} | Musetic{% endblock %}
+
+{% block headersecondary %}
+    <div class="header-secondary">
+        <h4>Change this Submission's Thumbnail</h4>
+    </div>
+{% endblock %}
+{% block sidebar %}
+    <div class="sidebar pushy-left">
+        <ul class="categories">
+            <li><a class="{% if '/art/' in request.path %}active{% endif %}" href="{% url 'category' slug='art' %}" data-toggle="tooltip" data-placement="bottom" title="Art"><i class="fa fa-paint-brush"></i></a></li>
+            <li><a class="{% if '/design/' in request.path %}active{% endif %}" href="{% url 'category' slug='design' %}" data-toggle="tooltip" data-placement="bottom" title="Design"><i class="fa fa-desktop"></i></a></li>
+            <li><a class="{% if '/imagery/' in request.path %}active{% endif %}" href="{% url 'category' slug='imagery' %}" data-toggle="tooltip" data-placement="bottom" title="Imagery"><i class="fa fa-camera"></i></a></li>
+            <li><a class="{% if '/sound/' in request.path %}active{% endif %}" href="{% url 'category' slug='sound' %}" data-toggle="tooltip" data-placement="bottom" title="Sound"><i class="fa fa-headphones"></i></a></li>
+            <li><a class="{% if '/video/' in request.path %}active{% endif %}" href="{% url 'category' slug='video' %}" data-toggle="tooltip" data-placement="bottom" title="Video"><i class="fa fa-video-camera"></i></a></li>
+            <li><a class="{% if '/writing/' in request.path %}active{% endif %}" href="{% url 'category' slug='writing' %}" data-toggle="tooltip" data-placement="bottom" title="Writing"><i class="fa fa-pencil"></i></a></li>
+        </ul>
+
+    <div class="submissions-single-item">
+
+            <div class="submissions-th">
+                {% if submission.thumbnail %}
+                    {% submission_image submission.url 500 %}
+                {% endif %}
+            </div>
+            <div class="submissions-overlay"></div>
+            <a class="submissions-title-area" rel="follow" href="{{ submission.url }}" target=_blank></a>
+
+            <form method="post" action="{% url 'vote' %}" class="vote-form">
+                {% csrf_token %}
+                <input type="hidden" id="id_submission" name="submission" class="hidden_id"
+                       value="{{ submission.id }}"/>
+                <input type="hidden" id="id_voter" name="voter" class="hidden_id"
+                       value="{{ user.id }}"/>
+                {% if not user.is_authenticated %}
+                    <button class="upvote-button vote-disabled" title="Login/Register to vote"><i
+                            class="fa fa-2x fa-angle-up"></i></button>
+                    <div class="num-votes vote-disabled">
+                        {{ submission.votes }}
+                    </div>
+                {% elif submission.id not in voted %}
+                    <button class="upvote-button unvoted"><i class="fa fa-2x fa-angle-up"></i></button>
+                    <div class="num-votes unvoted">
+                        {{ submission.votes }}
+                    </div>
+                {% else %}
+                    <button class="upvote-button voted"><i class="fa fa-2x fa-angle-up"></i></button>
+                    <div class="num-votes voted">
+                        {{ submission.votes }}
+                    </div>
+                {% endif %}
+            </form>
+        </div>
+
+    <div class="footer">
+    	<div class="footer-links">
+			<a href="{% url 'about' %}">About&nbsp;</a>
+            <a href="http://blog.musetic.com">Blog&nbsp;</a>
+			<a href="{% url 'terms_of_use' %}">Terms&nbsp;</a>
+			<a href="{% url 'privacy_policy' %}">Privacy&nbsp;</a>
+		</div>
+    	<div class="copy left">
+			&copy; 2015 Musetic
+		</div>
+    </div>
+    </div>
+{% endblock %}
 {% block content %}
-    <div class="submission-info-wrapper">
-        <div class="submissions-th">
+    <div class="submission-change-thumbnail">
+        <div class="submission-th">
             {% if submission.thumbnail %}
                 {% submission_image submission.url 500 %}
             {% endif %}
